# zenn-ai-agent-hackathon

.github/workflows/: deploy.yml
apps/agent/: .env.example  README.md  pyproject.toml
apps/agent/agent/: camera.py  config.py  genai.py  hello.py  main.py  sandbox.py  speech.py  speech_to_text.py  storage.py
apps/web/: .env.sample  compose.yml  package.json  pnpm-lock.yaml
apps/web/prisma/: schema-py.prisma  schema.prisma  seed.ts
apps/web/src/app/: page.tsx
apps/web/src/app/api/: index.ts
apps/web/src/app/api/messages/: route.ts
apps/web/src/app/api/users/[userId]/: route.ts
apps/web/src/components/: app-sidebar.tsx  nav-secondary.tsx  nav-user.tsx
apps/web/src/config/: index.ts
docker/web/: Dockerfile
terraform/: cloud_run.tf  cloud_sql.tf  iam.tf  main.tf  secret_manager.tf  variables.tf
