[project]
name = "agent"
version = "0.1.0"
description = "Agent is a virtual assistant that can help you with your daily tasks."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "google-auth>=2.37.0",
    "google-cloud-speech==2.30.0",
    "google-cloud-storage>=2.19.0",
    "google-cloud-texttospeech==2.23.0",
    "google-genai==0.5.0",
    "numpy==1.26.4",
    "opencv-python-headless==4.10.0.84",
    "pillow==11.1.0",
    "prisma==0.15.0",
    "pyaudio==0.2.14",
    "pydantic-settings==2.7.1",
    "pyttsx3==2.98",
    "speechrecognition==3.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
